add sbt